--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -316,26 +316,13 @@ $(function () {
 
         var doughnutData = [
                 {
-                    value: 30,
+                    value: <%= @total_signups %>,
                     color:"#F7464A"
                 },
                 {
-                    value : 50,
+                    value : <%= @total_attendees %>,
                     color : "#46BFBD"
-                },
-                {
-                    value : 100,
-                    color : "#FDB45C"
-                },
-                {
-                    value : 40,
-                    color : "#949FB1"
-                },
-                {
-                    value : 120,
-                    color : "#4D5360"
                 }
-            
             ];
 
     var myDoughnut = new Chart(document.getElementById("signupsVsAttendees").getContext("2d")).Doughnut(doughnutData);
