--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -530,18 +530,18 @@ h4
 /*******************************************************************/
 /* Checkout Styles */
 /*******************************************************************/
-.checkoutContainer
-{
+//.checkoutContainer
+//{
 
-	margin: 20px 0;
+	//margin: 20px 0;
 
-	-webkit-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
-	-moz-box-shadow:    1px 0px 10px rgba(50, 50, 50, 0.2);
-	box-shadow:         1px 0px 10px rgba(50, 50, 50, 0.2);
-	-moz-border-radius: 0px;
-	-webkit-border-radius: 6px 6px 6px 6px;
-	border-radius: 6px 6px 6px 6px; 
-
+	//-webkit-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+	//-moz-box-shadow:    1px 0px 10px rgba(50, 50, 50, 0.2);
+	//box-shadow:         1px 0px 10px rgba(50, 50, 50, 0.2);
+	//-moz-border-radius: 0px;
+	//-webkit-border-radius: 6px 6px 6px 6px;
+	//border-radius: 6px 6px 6px 6px; 
+	/*
 	.checkoutHeader
 	{
 		background: $topBar_color;
@@ -571,7 +571,159 @@ h4
 			}
 		}
 	}
+	*/
+//}
+
+/*******************************************************************/
+/* Checkout Styles V2 */
+/*******************************************************************/
+.checkoutContainer
+{
+	-webkit-box-shadow: 1px 0px 10px rgba(50, 50, 50, 0.2);
+	-moz-box-shadow:    1px 0px 10px rgba(50, 50, 50, 0.2);
+	box-shadow:         1px 0px 10px rgba(50, 50, 50, 0.2);
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 6px 6px 6px 6px;
+	border-radius: 6px 6px 6px 6px; 
+
+	.checkoutHeader
+	{
+		background: #0a2a35;
+		padding: 10px;
+		margin-top: 20px;
+		color: white;
+		text-transform: uppercase;
+	}
+	.checkoutContents
+	{
+	//	background: url("/assets/checkoutBG.png");
+		background: white;
+		padding: 10px;
+		.eventName
+		{
+			padding-bottom: 20px;
+		}
+		.no-right-padding
+		{
+			padding-right: 0;
+		}
+		.no-left-padding
+		{
+			padding-left: 0;
+		}
+		.price
+		{
+			background: #def2f9;
+			padding: 10px 0;
+			text-align: center;
+			color: #1b6e8a;
+		}
+		.specialPrice
+		{
+			background: #1b6e8a;
+			color: white;
+			padding: 10px 0;
+			text-align: center;
+		}
+		.descText
+		{
+			text-transform: uppercase;
+			font-size: 13px;
+		}
+		.subDesc
+		{
+			text-transform: uppercase;
+			font-size: 13px;	
+		}
+		.pricePerSeat
+		{
+			font-size: 30px;
+		}
+		
+	}
+	.checkoutSeats
+	{
+		padding: 10px 10px 10px 10px;;
+		background: white;
+		margin-top: -10px;
+	}
+	.pay
+	{
+		background: white;
+		padding: 10px;
+		button
+		{
+			width: 100%;
+
+			 display: block;
+			line-height: 1em;
+			text-transform: uppercase;
+			text-align: center;
+			border: 0;
+			cursor: pointer;
+			letter-spacing: 1px;
+			font-weight: bold;
+			text-decoration: none;
+			margin: 0;
+			padding: 18px 24px 16px 25px;
+			color: #fff;
+			background: #82b255;
+			-webkit-box-shadow: 0 2px 0 rgba(81,122,22,0.75),inset 0 -1px 0 rgba(255,255,255,0.2);
+			-moz-box-shadow: 0 2px 0 rgba(81,122,22,0.75),inset 0 -1px 0 rgba(255,255,255,0.2);
+			box-shadow: 0 2px 0 rgba(81,122,22,0.75),inset 0 -1px 0 rgba(255,255,255,0.2);
+			-webkit-border-radius: 4px;
+			-moz-border-radius: 4px;
+			-ms-border-radius: 4px;
+			-o-border-radius: 4px;
+			border-radius: 4px;
+
+			&:hover
+			{
+				color: #fff; background: #719f46; 	
+			}
+			&:active
+			{
+				background: #5e8837;
+				-webkit-box-shadow: inset 0 2px 0 rgba(64,108,0,0.75);
+				-moz-box-shadow: inset 0 2px 0 rgba(64,108,0,0.75);
+				box-shadow: inset 0 2px 0 rgba(64,108,0,0.75);		
+			}
+		}
+	}
+	.cartTotal
+	{
+		//background: url("/assets/checkoutBG.png");
+		background: #ede9d8;
+		padding: 20px 10px;
+		//margin: 10px 0;
+
+		strong
+		{
+			line-height: 1.8em;
+			text-transform: uppercase;
+		}
+		.cartTotalPrice
+		{
+			font-size: 39px;
+			margin-top: -15px;
+		}
+	}
+	#selectPaymentMethod
+	{
+		background: white;
+		//padding:10px;
+	}
+	#paymentOptionSelect
+	{
+		margin-bottom: 20px;
+
+	}
 }
+
+
+/*******************************************************************/
+/* Common Styles */
+/*******************************************************************/
 
 /*******************************************************************/
 /* Common Styles */
