Added RHB to the list of banks people can pay from in the checkout page

--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -80,6 +80,7 @@
 									<option value="">- Please select a payment option -</option>
 									<option value="6">Maybank2U</option>
 									<option value="8">Alliance Online</option>
+									<option value="14">RHB</option>
 									<option value="15">Hong Leong Online</option>
 									<option value="16">FPX</option>
 									<option value="17">Mobile Money</option>
