--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -127,6 +127,18 @@ mixpanel.init("8109b4e39a8360bc43bf067857408e00");</script><!-- end Mixpanel -->
     </script>
     <!-- Heap code end -->
 
+    <!-- Rollbar js bug tracking start -->
+    <script>
+var _rollbarParams = {"server.environment": "production"};
+_rollbarParams["notifier.snippet_version"] = "2"; var _rollbar=["ee7387e401a84ebca4e766afb3f0496c", _rollbarParams]; var _ratchet=_rollbar;
+(function(w,d){w.onerror=function(e,u,l){_rollbar.push({_t:'uncaught',e:e,u:u,l:l});};var i=function(){var s=d.createElement("script");var 
+f=d.getElementsByTagName("script")[0];s.src="//d37gvrvc0wt4s1.cloudfront.net/js/1/rollbar.min.js";s.async=!0;
+f.parentNode.insertBefore(s,f);};if(w.addEventListener){w.addEventListener("load",i,!1);}else{w.attachEvent("onload",i);}})(window,document);
+</script>
+
+    <!-- Rollbar js bug tracking end -->
+
+
 </head>
 <body <%= yield :body_class %>>
   <div class="wrap">
