--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -286,7 +286,10 @@ $(function () {
 
 
     <script>
-
+pointInterval: <%= 1.day * 1000 %>,
+pointStart: <%= 4.weeks.ago.to_i * 1000 %>,
+data: <%= (4.weeks.ago.to_date..Date.today).map {|date| User.total_signups_on(date).to_i}.inspect %>
+                
         var lineChartData = {
             labels : ["January","February","March","April","May","June","July"],
             datasets : [
