--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -1,4 +1,25 @@
 /******************************************************************************/
+/* Color Scheme */
+/******************************************************************************/
+$base_dark_blue: #4d5360;
+$base_light_blue: #949fb1;
+$contrast_red: #f7464a;
+$contrast_green: #46bfbd;
+$contrast_orange: #fdb45c;
+/******************************************************************************/
+/* Common styling */
+/******************************************************************************/
+a
+{
+	color: $contrast_green;
+	&:hover
+	{
+		color: white;
+		background: $contrast_green;
+	}
+}
+
+/******************************************************************************/
 /* Chart styling */
 /******************************************************************************/
 .canvas {
@@ -6,6 +27,33 @@
       max-width: 1000px;
       height: auto !important;
 }
+.legend
+{
+	margin-top: 20px;
+	.ledgentItemContainer
+	{
+		float: left;
+		margin-right: 20px;
+		.square
+		{
+			height: 20px;
+			width: 20px;
+			display: inline-block;
+			vertical-align: center;
+			float: left;
+			margin-right: 5px;
+		}
+		.dark_blue
+		{
+			background: rgba(151,187,205,1);
+		}
+		.light_blue
+		{
+			background: rgba(220,220,220,1);
+		}		
+	}
+}
+
 /******************************************************************************/
 /* Stats styling */
 /******************************************************************************/
@@ -24,9 +72,63 @@
 }
 
 /******************************************************************************/
+/* List styling */
+/******************************************************************************/
+.adminList
+{
+	margin: 0 0 20px 0;
+	padding: 0;
+	list-style: none;
+	li
+	{
+		padding: 20px 0;
+		border-bottom: 1px solid #ccc;
+		ul
+		{
+			margin: 0;
+			padding: 10px 0 0 0;
+			list-style: none;
+			li
+			{
+				display: inline;
+				border-bottom: none;
+				margin-right: 10px;
+				span
+				{
+					color: $base_light_blue;
+				}
+			}
+		}
+	}
+}
+/******************************************************************************/
+/* Event list styling */
+/******************************************************************************/
+.eventListCity
+{
+	color: $base_light_blue;
+	padding: 20px 0;
+	border-bottom: 1px solid #ccc;
+}
+.event_name
+{
+	font-weight: bold;
+}
+.eventListActions
+{
+	color: $contrast_orange;
+	&:hover
+	{
+		background: $contrast_orange;
+		color: white;
+	}
+}
+/******************************************************************************/
 /* Chart styling */
 /******************************************************************************/
-
+/******************************************************************************/
+/* Chart styling */
+/******************************************************************************/
 /******************************************************************************/
 /* Chart styling */
 /******************************************************************************/
